istio/istio-infra/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: school
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        exact: /classes
    # - uri:
    #     regex: /classes/.*
    route:
    - destination:
        host: classes-school-manager-api.classes-system
        port:
          number: 80
  - match:
    - uri:
        exact: /students
    # - uri:
    #     regex: /students/.*
    route:
    - destination:
        host: students-school-manager-api.students-system
        port:
          number: 80
